[package]
name = "loomovie"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
crc32fast = "1.5.0"
flate2 = "1.1.9"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[build-dependencies]
prost-build = "0.14.3"
